chore: add some sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,112 @@
     <title>YtYt School</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="wrapper">
+            <div class="header__content bg-img">
+                <div class="header__navigation">
+                    <span class="logo"></span>
+                    <ul class="navigation">
+                        <a href="#" class="link">
+                            <li class="navigation__link">Чему вы научитесь</li>
+                        </a>
+                        <a href="#" class="link">
+                            <li class="navigation__link">Процесс обучения</li>
+                        </a>
+                        <a href="#" class="link">
+                            <li class="navigation__link">Стоимость</li>
+                        </a>
+                        <a href="#" class="link">
+                            <li class="navigation__link">Контакты</li>
+                        </a>
+                    </ul>
+                    <a href="" class="link">Регистрация</a>
+                    <button class="button">
+                        <span class="icon"></span>
+                        Войти
+                    </button>
+                </div>
+                <div class="header__content__text">
+                    <h1>
+                        Школа {программирования} для тех, кому нужны реальные навыки, а не просто сертификат
+                    </h1>
+                    <span class="line"></span>
+                    <p>Пройдите тестирование, чтобы получить доступ к бесплатным вводным урокам</p>
+                    <button class="button">
+                        Пройти тестирование
+                        <span class="icon"></span>
+                    </button>
+                </div>
+                <!--ADD ARROW-DOWN-->
+            </div>
+        </div>
+    </header>
+    <section class="technology">
+        <div class="wrapper">
+            <h2>Какие технологии вы изучите:</h2>
+            <div class="technology__block block">
+                <img src="./img/main/img1.png" alt="img">
+                <div class="technology__block__text">
+                    <div class="items">
+                        <span class="item">Язык программирования Python</span>
+                        <span class="item">Сети</span>
+                        <span class="item">Базы данных</span>
+                        <span class="item">Фреймворки Flask и Django</span>
+                        <span class="item">Отладка и тестирование</span>
+                        <span class="item">Docker</span>
+                        <span class="item">Git</span>
+                    </div>
+                    <p>Это необходимый минимум для современного backend-разработчика</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="education">
+        <div class="wrapper">
+            <h2>Обучение в YtYt – это удобно и результативно</h2>
+            <div class="education__blocks">
+                <div class="block block__text">
+                    <span class="icon"></span>
+                    <h4>Огромное количество практики</h4>
+                    <p>Более 500 самостоятельных заданий и 20 полноценных больших проектов</p>
+                </div>
+                <div class="block block__text">
+                    <span class="icon"></span>
+                    <h4>Современные методики обучения</h4>
+                    <p>Спиральное обучение:
+                        погружаемся в материал постепенно, виток за витком</p>
+                </div>
+                <div class="block block__text">
+                    <span class="icon"></span>
+                    <h4>Простое и понятное изложение</h4>
+                    <p>Вместо заумных терминов – примеры из реального мира</p>
+                </div>
+                <div class="block block__text">
+                    <span class="icon"></span>
+                    <h4>Гибкий график занятий</h4>
+                    <p>Учитесь в любое время в удобном
+                        для вас темпе</p>
+                </div>
+                <div class="block block__text">
+                    <span class="icon"></span>
+                    <h4>Прямая связь с опытными программистами</h4>
+                    <p>Задавайте вопросы
+                        и отправляйте свой код на проверку</p>
+                </div>
+                <div class="block block__text">
+                    <span class="icon"></span>
+                    <h4>Оплата небольшими частями</h4>
+                    <p>Платите только за тот материал, который сейчас изучаете,
+                        а не за весь курс сразу</p>
+                </div>
+                <div class="block block__text">
+                    <span class="icon"></span>
+                    <h4>Быстрый и легкий возврат</h4>
+                    <p>Если передумаете учиться –
+                        вернем деньги за 3 рабочих дня</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
