--- a/index.html
+++ b/index.html
@@ -114,5 +114,83 @@
             </div>
         </div>
     </section>
+    <section class="study">
+        <div class="wrapper">
+            <h2>Как происходит обучение на YtYt?</h2>
+            <p>Обучение должно быть комфортным. Поэтому мы разработали собственную платформу для обучения программированию. На ней вы можете не только изучать теорию, но и запускать готовые примеры и даже писать свой собственный код.
+            </p>
+            <!--img with video-->
+            <div class="study__block">
+                <div class="layout-3-column">
+                    <div class="study__block__content">
+                        <p>01</p>
+                        <h3>Весь материал разбит на небольшие уроки</h3>
+                        <p>Теория и практика подаются маленькими порциями. Так вам будет легче усваивать новые знания.</p>
+                    </div>
+                    <div class="study__block__content">
+                        <p>02</p>
+                        <h3>Обучение через практику</h3>
+                        <p>Всё, что вы узнали, вы тут же начинаете применять на практике. Вы сразу видите результаты своего труда.</p>
+                    </div>
+                    <div class="study__block__content">
+                        <p>03</p>
+                        <h3>Нет ограничений по времени</h3>
+                        <p>Можно совмещать учёбу с работой и другими делами. Не нужно выпрашивать академический отпуск, если пришлось сделать перерыв.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="button__content">
+                <div class="button">
+                    Начать обучение
+                    <span class="icon"></span>
+                </div>
+                <p>Попробуйте, первые уроки бесплатны, но нужно пройти тестирование</p>
+            </div>
+        </div>
+    </section>
+    <section class="support">
+        <div class="wrapper">
+            <div class="layout-2-column">
+                <div class="support__img">
+                    <!--img-->
+                </div>
+                <div class="support__text">
+                    <h3>Помощь и поддержка</h3>
+                    <p>Если в процессе обучения возникнут сложности, вы всегда сможете задать вопрос своему наставнику.</p>
+                    <p>Раз в несколько уроков вы будете получать большое задание, которое нужно будет сдавать на проверку код-ревьюеру. Он внимательно изучит ваш код, найдет ошибки и поможет вам стать лучше.</p>
+                </div>
+            </div>
+            <div class="layot-2-column">
+                <div class="support__text">
+                    <h3>Методика обучения</h3>
+                    <p>Весь учебный материал структурирован по принципу «спирального обучения». Сначала вы получаете базовые знания, а затем на каждом витке спирали углубляетесь в изученные темы, доводя их понимание до совершенства. Такой подход упрощает обучение и гарантирует, что вы не пропустите ничего важного.</p>
+                </div>
+                <div class="support__img">
+                    <!--img-->
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="price">
+        <div class="wrapper">
+            <h2>Стоимость обучения</h2>
+            <div class="price__content">
+                <div class="price__content__block">
+                    <span class="icon"></span>
+                    <p>Весь курс разбит на несколько блоков. Оплата поэтапная вы платите только за тот блок, который сейчас проходите.
+                    </p>
+                </div>
+                <div class="price__content__block">
+                    <span class="icon"></span>
+                    <p>Любой из блоков вы можете оплатить в рассрочку</p>
+                </div>
+                <div class="price__content__block">
+                    <span class="icon"></span>
+                    <p>Если передумаете учиться, то возврат можно оформить в любой момент. Возвращаем деньги за 3 рабочих дня.</p>
+                </div>
+            </div>
+            
+        </div>
+    </section>
 </body>
 </html>
