chore: add new sections to html

--- a/index.html
+++ b/index.html
@@ -189,8 +189,123 @@
                     <p>Если передумаете учиться, то возврат можно оформить в любой момент. Возвращаем деньги за 3 рабочих дня.</p>
                 </div>
             </div>
-            
+            <div class="price__table">
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Блок</p>
+                        <p>Стоимость (&#8381;)</p>
+                        <p>Расчетное время обучения (мес.)*</p>
+                    </div>
+                </div>
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Введение в программирование</p>
+                        <p>Бесплатно</p>
+                        <p>0.5</p>
+                    </div>
+                </div>
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Основы программирования на Python</p>
+                        <p>9 900</p>
+                        <p>1</p>
+                    </div>
+                </div>
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Python, продвинутый уровень</p>
+                        <p>14 900</p>
+                        <p>2.5</p>
+                    </div>
+                </div>
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Сети + фреймворк Flask</p>
+                        <p>14 900</p>
+                        <p>2.5</p>
+                    </div>
+                </div>
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Базы данных</p>
+                        <p>14 900</p>
+                        <p>2</p>
+                    </div>
+                </div>
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Фреймворк Django</p>
+                        <p>14 900</p>
+                        <p>2</p>
+                    </div>
+                </div>
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Разработка "боевого" проекта</p>
+                        <p>9 900</p>
+                        <p>1.5</p>
+                    </div>
+                </div>
+                <div class="price__table__list">
+                    <div class="layout-3-columns">
+                        <p>Итого</p>
+                        <p>74 900</p>
+                        <p>12</p>
+                    </div>
+                </div>
+            </div>
+            <p>* если занятиям уделяется около 20 часов в неделю</p>
+            <div class="price__attention">
+                <div class="layout-3-columns">
+                    <span class="icon"></span>
+                    <p>Все блоки проходятся строго по порядку. Пропустить какой-то блок или начать обучение с середины нельзя, даже если вы считаете, что уже знаете какую-то часть материала. Только так мы можем гарантировать, что вы получите все знания, предусмотренные учебной программой.</p>
+                    <button class="button">
+                        Начать обучение
+                        <span class="icon"></span>
+                    </button>
+                </div>
+            </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="wrapper">
+            <div class="layout-3-columns">
+                <div class="footer__socials">
+                    <div class="footer__logotype">
+                        <span class="logo"></span>
+                        <p>Школа программирования</p>
+                    </div>
+                    <div class="footer__icons">
+                        <span class="icon"></span>
+                        <span class="icon"></span>
+                        <span class="icon"></span>
+                        <span class="icon"></span>
+                    </div>
+                </div>
+                <div class="footer__navigation">
+                    <ul>
+                        <a href="#"><li>Чему вы научитесь</li></a>
+                        <a href="#"><li>Процесс обучения</li></a>
+                        <a href="#"><li>Стоимость</li></a>
+                        <a href="#"><li>Контакты</li></a>
+                        <a href="#"><li>Регистрация</li></a>
+                    </ul>
+                </div>
+                <div class="footer__contacts">
+                    <a href="tel:+7 (499) 348 93 96"></a>
+                    <a href="mailto:info@ytyt.ru"></a>
+                    <p>ИП Умаров Т. А.\n
+                       ИНН 745216229809\n
+                       ОГРНИП 315745200001358</p>
+                </div>
+            </div>
+            <span class="line"></span>
+            <div class="layout-3-columns">
+                <p>© 2022 ytyt — Все права защищены</p>
+                <p>Пользовательское соглашение</p>
+                <p>Политика конфиденциальности</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
