chore: add styles

--- a/index.html
+++ b/index.html
@@ -4,34 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="sass/style.css">
     <title>YtYt School</title>
 </head>
 <body>
     <header class="header">
         <div class="wrapper">
+            <div class="header__navigation ">
+                <span class="logo"></span>
+                <ul class="navigation">
+                    <a href="#" class="link">
+                        <li class="navigation__link">Чему вы научитесь</li>
+                    </a>
+                    <a href="#" class="link">
+                        <li class="navigation__link">Процесс обучения</li>
+                    </a>
+                    <a href="#" class="link">
+                        <li class="navigation__link">Стоимость</li>
+                    </a>
+                    <a href="#" class="link">
+                        <li class="navigation__link">Контакты</li>
+                    </a>
+                    <a href="" class="link">
+                        <li class="navigation__link">Регистрация</li>
+                    </a>
+                </ul>
+                <button class="button">
+                    <span class="icon icon-arrow"></span>
+                    Войти
+                </button>
+            </div>
             <div class="header__content bg-img">
-                <div class="header__navigation">
-                    <span class="logo"></span>
-                    <ul class="navigation">
-                        <a href="#" class="link">
-                            <li class="navigation__link">Чему вы научитесь</li>
-                        </a>
-                        <a href="#" class="link">
-                            <li class="navigation__link">Процесс обучения</li>
-                        </a>
-                        <a href="#" class="link">
-                            <li class="navigation__link">Стоимость</li>
-                        </a>
-                        <a href="#" class="link">
-                            <li class="navigation__link">Контакты</li>
-                        </a>
-                    </ul>
-                    <a href="" class="link">Регистрация</a>
-                    <button class="button">
-                        <span class="icon"></span>
-                        Войти
-                    </button>
-                </div>
                 <div class="header__content__text">
                     <h1>
                         Школа {программирования} для тех, кому нужны реальные навыки, а не просто сертификат
