chore: pixelPerfect method

--- a/index.html
+++ b/index.html
@@ -10,41 +10,46 @@
 <body>
     <header class="header">
         <div class="wrapper">
-            <div class="header__navigation ">
-                <span class="logo"></span>
-                <ul class="navigation">
-                    <a href="#" class="link">
-                        <li class="navigation__link">Чему вы научитесь</li>
-                    </a>
-                    <a href="#" class="link">
-                        <li class="navigation__link">Процесс обучения</li>
-                    </a>
-                    <a href="#" class="link">
-                        <li class="navigation__link">Стоимость</li>
-                    </a>
-                    <a href="#" class="link">
-                        <li class="navigation__link">Контакты</li>
-                    </a>
-                    <a href="" class="link">
-                        <li class="navigation__link">Регистрация</li>
-                    </a>
-                </ul>
-                <button class="button">
-                    <span class="icon icon-arrow"></span>
-                    Войти
-                </button>
-            </div>
-            <div class="header__content bg-img">
-                <div class="header__content__text">
-                    <h1>
-                        Школа {программирования} для тех, кому нужны реальные навыки, а не просто сертификат
-                    </h1>
-                    <span class="line"></span>
-                    <p>Пройдите тестирование, чтобы получить доступ к бесплатным вводным урокам</p>
-                    <button class="button">
-                        Пройти тестирование
-                        <span class="icon"></span>
+                <div class="header__navigation">
+                    <span class="logo"></span>
+                    <ul class="navigation">
+                        <a href="#" class="link">
+                            <li class="navigation__link">Чему вы научитесь</li>
+                        </a>
+                        <a href="#" class="link">
+                            <li class="navigation__link">Процесс обучения</li>
+                        </a>
+                        <a href="#" class="link">
+                            <li class="navigation__link">Стоимость</li>
+                        </a>
+                        <a href="#" class="link">
+                            <li class="navigation__link">Контакты</li>
+                        </a>
+                        <a href="" class="link">
+                            <li class="navigation__link">Регистрация</li>
+                        </a>
+                    </ul>
+                    <button class="button button_colored">
+                        <span class="icon icon-arrow"></span>
+                        Войти
                     </button>
+                </div>
+            <div class="layout-2-column header__column">
+                <div class="header__content">
+                    <div class="header__title">
+                        <h1>
+                            Школа <span>{</span><i>программирования</i><span>}</span><br> для тех, кому нужны реальные навыки, <br>а не просто сертификат
+                        </h1>
+                    </div>
+                    <span class="line"></span>
+                    <p class="header__text">Пройдите тестирование, чтобы получить доступ к бесплатным вводным урокам</p>
+                    <button class="button button_primary header__button">
+                        Пройти тестирование
+                        <span class="icon icon-arrow-up"></span>
+                    </button>
+                </div>
+                <div class="header__img">
+                    <img src="./img/main/02.png" alt="image" class="img_computer">
                 </div>
                 <!--ADD ARROW-DOWN-->
             </div>
