chore: code maintenance

--- a/index.html
+++ b/index.html
@@ -87,46 +87,59 @@
         <div class="wrapper">
             <h2 class="education__title">Обучение в YtYt – это удобно и результативно</h2>
             <div class="education__blocks">
-                <div class="block block__text">
-                    <span class="icon"></span>
-                    <h4>Огромное количество практики</h4>
-                    <p>Более 500 самостоятельных заданий и 20 полноценных больших проектов</p>
+                <div class="block">
+                    <div class="block__text">
+                        <span class="icon icon-practice"></span>
+                        <h4>Огромное количество практики</h4>
+                        <p>Более 500 самостоятельных заданий и 20 полноценных больших проектов</p>
+                    </div>
                 </div>
-                <div class="block block__text">
-                    <span class="icon"></span>
-                    <h4>Современные методики обучения</h4>
-                    <p>Спиральное обучение:
+                <div class="block ">
+                    <div class="block__text">
+                        <span class="icon icon-methods"></span>
+                        <h4>Современные методики обучения</h4>
+                        <p>Спиральное обучение:
                         погружаемся в материал постепенно, виток за витком</p>
+                    </div>
                 </div>
-                <div class="block block__text">
-                    <span class="icon"></span>
-                    <h4>Простое и понятное изложение</h4>
-                    <p>Вместо заумных терминов – примеры из реального мира</p>
+                <div class="block ">
+                    <div class="block__text">
+                        <span class="icon icon-comuter"></span>
+                        <h4>Простое и понятное изложение</h4>
+                        <p>Вместо заумных терминов – примеры из реального мира</p>
+                    </div>
                 </div>
-                <div class="block block__text">
-                    <span class="icon"></span>
-                    <h4>Гибкий график занятий</h4>
-                    <p>Учитесь в любое время в удобном
-                        для вас темпе</p>
+                <div class="block ">
+                    <div class="block__text">
+                        <span class="icon icon-calendar"></span>
+                        <h4>Гибкий график занятий</h4>
+                        <p>Учитесь в любое время в удобном для вас темпе</p>
+                    </div>
                 </div>
-                <div class="block block__text">
-                    <span class="icon"></span>
-                    <h4>Прямая связь с опытными программистами</h4>
-                    <p>Задавайте вопросы
-                        и отправляйте свой код на проверку</p>
-                </div>
-                <div class="block block__text">
-                    <span class="icon"></span>
-                    <h4>Оплата небольшими частями</h4>
-                    <p>Платите только за тот материал, который сейчас изучаете,
-                        а не за весь курс сразу</p>
-                </div>
-                <div class="block block__text">
-                    <span class="icon"></span>
-                    <h4>Быстрый и легкий возврат</h4>
-                    <p>Если передумаете учиться –
-                        вернем деньги за 3 рабочих дня</p>
-                </div>
+                    <div class="block ">
+                        <div class="block__text">
+                            <span class="icon icon-message"></span>
+                            <h4>Прямая связь с опытными программистами</h4>
+                            <p>Задавайте вопросы
+                                и отправляйте свой код на проверку</p>
+                        </div>
+                    </div>
+                    <div class="block ">
+                        <div class="block__text">
+                            <span class="icon icon-rub"></span>
+                            <h4>Оплата небольшими частями</h4>
+                            <p>Платите только за тот материал, который сейчас изучаете,
+                            а не за весь курс сразу</p>
+                        </div>
+                    </div>
+                    <div class="block ">
+                        <div class="block__text">
+                            <span class="icon icon-card"></span>
+                            <h4>Быстрый и легкий возврат</h4>
+                            <p>Если передумаете учиться –
+                            вернем деньги за 3 рабочих дня</p>
+                        </div>
+                    </div>
             </div>
         </div>
     </section>
